# thepseudocodeus.github.io

./: .gitignore  Makefile  Taskfile.yml  hugo.toml  main.py  pyproject.toml  requirements.in  requirements.txt
.devcontainer/: Dockerfile  Dockerfile copy 2  Dockerfile.old1.txt  Dockerfile.old10.txt  Dockerfile.old2.txt  Dockerfile.old3.txt  Dockerfile.old4.txt  Dockerfile.old5.txt  Dockerfile.old6.txt  Dockerfile.old9.txt  README.md  check_env.sh.old1.txt  devcontainer copy.json  devcontainer.json  devcontainer.json.old1.txt  devcontainer.json.old11.txt  devcontainer.json.old12.txt  devcontainer.json.old13.txt  devcontainer.json.old2.txt  devcontainer.json.old5.txt  devcontainer.json.old6.txt  devcontainer.json.old7.txt  devcontainer.json.old8.txt  repair_env.sh.old1.txt  state.env
.devcontainer/scripts/: base.sh  check_env.sh.old1.txt  dependencies.sh  orchestrator.sh  project.sh  python.sh  run.sh.old1.txt  setup.sh  setup.sh.old1.txt  setup.sh.old2.txt  setup.sh.old3.txt  setup.sh.old4.txt  setup.sh.old5.txt
.github/workflows/: hugo.yaml
content/posts/: a-decision-making-story-12-20-2025.md  my-first-post.md
ideas/: prompt_engineering_best_practices.md
public/: 404.html  index.html  index.xml  sitemap.xml
public/ananke/css/: main.css.map
public/page/1/: index.html
public/posts/: index.html  index.xml
public/posts/my-first-post/: index.html
public/posts/page/1/: index.html
public/tags/: index.html  index.xml
public/tags/page/1/: index.html
scripts/: README.md  gmanager.py  setup.sh
