[project]
name = "thepseudocodeus-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "duckdb>=1.3.2",
    "inquirerpy>=0.3.4",
    "marimo>=0.15.4",
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "rich>=14.1.0",
    "tqdm>=4.67.1",
    "typer>=0.17.4",
]
