[project]
name = "thepseudocodeus-github-io"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair==6.0.0",
    "annotated-types==0.7.0",
    "attrs==25.4.0",
    "black>=25.1.0",
    "blinker==1.9.0",
    "cachetools==6.2.4",
    "certifi==2025.11.12",
    "cfgv==3.5.0",
    "chardet==5.2.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "distlib==0.4.0",
    "duckdb>=1.3.2",
    "filelock==3.20.1",
    "gitdb==4.0.12",
    "gitpython==3.1.45",
    "h5py==3.15.1",
    "identify==2.6.15",
    "idna==3.11",
    "iniconfig==2.3.0",
    "inquirerpy==0.3.4",
    "jinja2==3.1.6",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "librt==0.7.5",
    "marimo>=0.15.4",
    "markdown-it-py==4.0.0",
    "markupsafe==3.0.3",
    "mdurl==0.1.2",
    "mypy==1.19.1",
    "mypy-extensions==1.1.0",
    "narwhals==2.14.0",
    "nodeenv==1.10.0",
    "numpy==2.4.0",
    "packaging==25.0",
    "pandas==2.3.3",
    "pathspec==0.12.1",
    "pfzy==0.3.4",
    "pillow==12.0.0",
    "platformdirs==4.5.1",
    "pluggy==1.6.0",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "pre-commit==4.5.1",
    "prompt-toolkit==3.0.52",
    "protobuf==6.33.2",
    "pyarrow==22.0.0",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pydeck==0.9.1",
    "pygments==2.19.2",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "pytz==2025.2",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "requests==2.32.5",
    "rich==14.2.0",
    "rpds-py==0.30.0",
    "ruff==0.14.10",
    "shellingham==1.5.4",
    "six==1.17.0",
    "smmap==5.0.2",
    "streamlit==1.52.2",
    "tdqm==0.0.1",
    "tenacity==9.1.2",
    "toml==0.10.2",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "typer==0.21.0",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "tzdata==2025.3",
    "urllib3==2.6.2",
    "virtualenv==20.35.4",
    "wcwidth==0.2.14",
]
